--- a/requirements.txt
+++ b/requirements.txt
@@ -13,19 +13,15 @@ cffi==1.14.6
 chardet==4.0.0
 charset-normalizer==2.0.4
 cleo==0.8.1
-click @ file:///home/runner/.cache/pypoetry/artifacts/8f/3b/a2/8723003e2d1e2dd7b59651059c81b542c78d31dab789a9c0a3eb2f032b/click-8.0.0-py3-none-any.whl
 clikit==0.6.2
 crashtest==0.3.1
 cryptography==3.4.8
 cs50==7.0.2
 cycler==0.10.0
 debugpy==1.2.1
-discord @ file:///home/runner/.cache/pypoetry/artifacts/12/0c/ac/196221c244f8908c7924e506dee24ecf03e15ef715a5503602ea089c0e/discord-1.0.1-py3-none-any.whl
-discord.py @ file:///home/runner/.cache/pypoetry/artifacts/5c/69/57/1b58eef3572e1fc3d5dedb4580efb9ca406d44ba440a6676a3c858d092/discord.py-1.7.2-py3-none-any.whl
 distlib==0.3.2
 docopt==0.6.2
 filelock==3.0.12
-Flask @ file:///home/runner/.cache/pypoetry/artifacts/8c/7b/5b/3e8a7daa654f019ca8b247d1158ddade4f23e1fa0810a5f955e9c508a5/Flask-2.0.0-py3-none-any.whl
 funcsigs==1.0.2
 future==0.18.2
 gast==0.3.3
@@ -37,19 +33,16 @@ greenlet==1.1.1
 grpcio==1.40.0
 h5py==2.10.0
 html5lib==1.1
-idna @ file:///home/runner/.cache/pypoetry/artifacts/1b/d8/86/1c1e615ed44748ebeea47ef507f04d9ffab1b8996ef23494810eb9b89d/idna-3.1-py3-none-any.whl
 importlib-metadata==3.10.1
-itsdangerous @ file:///home/runner/.cache/pypoetry/artifacts/d8/97/48/c88021116b1136e01253839fd731b1b44ba398bbc0ea5ee879c1a81f19/itsdangerous-2.0.0-py3-none-any.whl
+any.whl
 jedi==0.15.2
 jeepney==0.7.1
-Jinja2 @ file:///home/runner/.cache/pypoetry/artifacts/fd/47/cf/adaca6a75645078a6533447a9aef377f935654134144104fd70724e360/Jinja2-3.0.0-py3-none-any.whl
 joblib==1.0.1
 Keras-Preprocessing==1.1.2
 keyring==21.8.0
 kiwisolver==1.3.2
 lockfile==0.12.2
 Markdown==3.3.4
-MarkupSafe @ file:///home/runner/.cache/pypoetry/artifacts/55/d5/03/92f8341dda98087660fdc2445b5c89ddea29af5d8077c26d86f14defd7/MarkupSafe-2.0.0-cp38-cp38-manylinux2010_x86_64.whl
 matplotlib==3.4.3
 msgpack==1.0.2
 multidict==5.1.0
@@ -82,10 +75,8 @@ pyquil==1.9.0
 python-dateutil==2.8.2
 python-jsonrpc-server==0.3.2
 python-language-server==0.31.10
-pyxel @ git+https://github.com/amasad/pyxel@8bcc2266b2fbb65f72ad686952de3838971c136e
 referenceqvm==0.3
 regex==2021.8.28
-replit @ file:///home/runner/.cache/pypoetry/artifacts/34/ef/78/1859741fc64bdbae5c3b3befa0255854d34b465a5668ada5103e8632f6/replit-3.1.0-py3-none-any.whl
 requests==2.26.0
 requests-oauthlib==1.3.0
 requests-toolbelt==0.9.1
@@ -100,21 +91,17 @@ SQLAlchemy==1.4.23
 sqlparse==0.4.2
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.8.0
-tensorflow-cpu @ https://storage.googleapis.com/tensorflow/linux/cpu/tensorflow_cpu-2.2.0-cp38-cp38-manylinux2010_x86_64.whl
 tensorflow-estimator==2.2.0
 termcolor==1.1.0
 toml==0.10.2
 tomlkit==0.7.2
 tqdm==4.62.2
-typing-extensions @ file:///home/runner/.cache/pypoetry/artifacts/fe/31/ef/8176395be3e4536aa430a84a1af3ade772047a9017c78ce2d045c1636b/typing_extensions-3.10.0.0-py3-none-any.whl
 ujson==1.35
 urllib3==1.26.6
 virtualenv==20.7.2
 webencodings==0.5.1
-Werkzeug @ file:///home/runner/.cache/pypoetry/artifacts/31/f1/9a/1003dcbd0e13369e823c925be14131d9d1b82f64685ef17fb83ddf4921/Werkzeug-2.0.0-py3-none-any.whl
 wrapt==1.12.1
 yapf==0.31.0
 yarg==0.1.9
 yarl==1.6.3
-youtube-dl @ file:///home/runner/.cache/pypoetry/artifacts/c3/ca/47/b57a639a8de90bafbc7738288fe5c70e6b6b966e269c7f6eb2ace48f4c/youtube_dl-2021.5.16-py2.py3-none-any.whl
 zipp==3.4.1
