--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ backports.entry-points-selectable==1.1.0
 CacheControl==0.12.6
 cachetools==4.2.2
 cachy==0.3.0
+discord.py==1.7.2
 certifi==2021.5.30
 cffi==1.14.6
 chardet==4.0.0
